example/lib/src/generated/errors/errors_localization_ta.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Tamil (`ta`).
class ErrorsLocalizationTa extends ErrorsLocalization {
  ErrorsLocalizationTa([String locale = 'ta']) : super(locale);

  @override
  String get error => 'தவற் ஏற்பட்டது';

  @override
  String get unexpectedError => 'எதிர்பாராத பிழை ஏற்பட்டது';

  @override
  String get bugReportSentText => 'பிழை அறிக்கை வெற்றிகரமாக அனுப்பப்பட்டது.';
}
